[gd_scene load_steps=3 format=3 uid="uid://7ie3nmke05xc"]

[ext_resource type="Script" path="res://scripts/game/game_root.gd" id="1_pghf4"]
[ext_resource type="Script" path="res://scripts/game/game_manager.gd" id="2_8dbwm"]

[node name="GameRoot" type="Node2D"]
script = ExtResource("1_pghf4")

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("2_8dbwm")

[connection signal="game_state_changed" from="." to="." method="_on_game_state_changed"]
